# Vango4.3

./: TODO.txt  sdkconfig  sdkconfig.old  ui_events.txt
Documents/: Apps Requirements.txt  AutoDeleteCopy.py  Diger ekranalara aktarim yaparken Yapilacaklar ESP-IDF.txt  Implementasyonlar.txt  SquareLine_Project.rar  Yapilacaklar.txt
Documents/ESP32_7_download_tool_3.9.5/ESP32_7_download_tool_3.9.5/configure/esp32s2/: spi_download.conf
Documents/ESP32_7_download_tool_3.9.5/ESP32_7_download_tool_3.9.5/configure/esp32s3/: spi_download.conf
Documents/ESP32_7_download_tool_3.9.5/ESP32_7_download_tool_3.9.5/dl_temp/_temp_by_dltool/downloadPanel1/: ESP32-S3_RF_Test_Bin_V101_20210623.bin_rep  ESP32_S3_Touch_LCD_1.28_TestCode1.bin_rep  ESP32_S3_Touch_LCD_1.28_TestCode2.bin_rep  ESP32_S3_Touch_LCD_1_28_TestCode1.bin_rep  ESP32_S3_Touch_LCD_1_28_TestCode2.bin_rep
Documents/ESP32_7_download_tool_3.9.5/ESP32_7_download_tool_3.9.5/logs/: 4827E23B2930.txt  4827E23DC17C.txt  7CDFA1EEE030.txt  84FCE65149E4.txt  DC5475D8E018.txt  DC5475D8E040.txt  DCDA0C54BE30.txt  F09E9E4202DC.txt  F0F5BD4AC8F4.txt
Documents/Mobdus Poll Slave Simulation/: Mbslave10.mbs  Mbslave11.mbs  Mbslave12.mbs  Mbslave2.mbs  Mbslave4.mbs  Mbslave7.mbs  Mbslave8.mbs  Mbslave9.mbs  Slaves.msw  Slavesmbs.mbs
Documents/SquareLine_Project/: SquareLine_Project.sll  SquareLine_Project.spj  SquareLine_Project_events.py
Documents/SquareLine_Project/UI_Files/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_img_birghtnescontrol_png.c  ui_scrDimsandSensorsandWaters.c  ui_scrInit.c  ui_scrMain.c  ui_scrPages.c  ui_scrPanelSettings.c  ui_scrRGB.c  ui_scrSettings.c  ui_scrTheme.c
components/hexnet/: CMakeLists.txt
components/hexnet/src/: hexnet_bluetooth.c
components/ui_files/: ui.c  ui.h  ui_events.c  ui_events.h  ui_img_btnsettings_png.c  ui_img_rgbcontrol_png.c  ui_img_sensors_png.c  ui_img_waterlevel_png.c  ui_scrCalibration.c  ui_scrConnectionSettings.c  ui_scrDims.c  ui_scrDimsandSensorsandWaters.c  ui_scrInit.c  ui_scrMain.c  ui_scrPages.c  ui_scrPanelSettings.c  ui_scrRGB.c  ui_scrRules.c  ui_scrSettings.c  ui_scrTheme.c
main/: CMakeLists.txt  data_manager.c  data_manager.h  display_manager.c  display_manager.h  main.c  waveshare_rgb_lcd_port.c  waveshare_rgb_lcd_port.h
